[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain-Games project"
authors = ["anns7one <obydennyhanna@gmail.com>"]
readme = "README.md"
repository = "https://github.com/anns7one/python-project-49"
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: ^3.11",
]

[tool.poetry.dependencies]
python = "^3.11"
prompt = "^0.4.1"
pip = "^23.3.1"
flake8 = "^6.1.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
